--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <body style= "font-family:sans-serif" >
     <header style="text-align:center;">
-          <h1 style="background-color:lightblue;">
+          <h1>
          <b>Велоспорт</b> 
         </h1>
     </header>
-    <main style="color:darkgreen; font-size:20px;">
-       <p style="background-color:lightblue;"> <b> Велоспорт — це їзда на велосипеді для задоволення, спорту або змагань. Існує багато видів велоспорту: по дорозі, по горах або на спеціальних трасах.</b>  </p>
+    <main style="color:darkgreen; font-size:20px; background-color:lightblue;">
+       <p> <b> Велоспорт — це їзда на велосипеді для задоволення, спорту або змагань. Існує багато видів велоспорту: по дорозі, по горах або на спеціальних трасах.</b>  </p>
 
-       <p style="background-color:lightblue;"> <b> Катання на велосипеді зміцнює здоров’я, робить людину сильнішою та витривалішою. Це також корисно для природи, бо велосипед не забруднює повітря.</b> </p>
+       <p> <b> Катання на велосипеді зміцнює здоров’я, робить людину сильнішою та витривалішою. Це також корисно для природи, бо велосипед не забруднює повітря.</b> </p>
        <img src="https://img.olympics.com/images/image/private/t_s_16_9_g_auto/t_s_w960/f_auto/primary/rpymnznx1cxnhunspkvb" width=300px" height="200px" />
 <table border="1">
     <tr>
@@ -38,14 +38,39 @@
       <td>Здоров’я, витривалість, екологічність</td>
     </tr>
    </table>
-   <p> Велосипед з педалями — це двоколісний транспортний засіб, який рухається за допомогою сили м'язів людини через обертання педалей. Він складається з рами, двох коліс, керма, сідла, педалей, ланцюга та зірочок, які передають зусилля від педалей до заднього колеса.</p>
+    </main>
+    <main>
+   <div style="background-color:#d0f0c0; padding:10px;">
+   <p> Велосипед — це двоколісний транспортний засіб, який рухається за допомогою сили м'язів людини через обертання педалей. Він складається з рами, двох коліс, керма, сідла, педалей, ланцюга та зірочок, які передають зусилля від педалей до заднього колеса.</p>
 
    
-   <p>Перший велосипед з педалями з’явився у 1860-х роках у Франції. Його створили П’єр Лалман і П’єр Мішо. Цей велосипед мав переднє колесо з прикріпленими до нього педалями й вважається предком сучасного велосипеда. <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmOAedQ0dKVrZEAmj0DwdezDClGEZGMEI6XA&s" width=200px" height="150px" /> </p>
-    </main>
-    <footer style=" background-color: #2c3e50; color: white; text-align: center; padding: 15px 0;">
-        <p> <a href="https://uk.wikipedia.org/wiki/%D0%92%D0%B5%D0%BB%D0%BE%D1%81%D0%B8%D0%BF%D0%B5%D0%B4%D0%BD%D0%B8%D0%B9_%D1%81%D0%BF%D0%BE%D1%80%D1%82">Детальніше про велоспорт</a></p>
+   <p>Перший велосипед з педалями з’явився у 1860-х роках у Франції. Його створили П’єр Лалман і П’єр Мішо. Цей велосипед мав переднє колесо з прикріпленими до нього педалями й вважається предком сучасного велосипеда. 
+   <br/> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmOAedQ0dKVrZEAmj0DwdezDClGEZGMEI6XA&s" width=200px" height="150px" /> </p>
+   </div>
+   </main>
+   <div style="background-color:#c4c4c4; padding:10px;">
+  <h2>Чому велосипед кращий за авто?</h2>
+  <p>Велосипед не забруднює повітря.</p>
+  <img src="https://learn.logikaschool.com/uploads/student/5804916/6837320a266ca.jpg" width="150px" />
+
+  <p>Не потребує пального.</p>
+  <img src="https://learn.logikaschool.com/uploads/student/5804916/683734adcea1a.jpg" width="100px" />
+
+  <p>Корисний для здоров’я.</p>
+  <img src="https://learn.logikaschool.com/uploads/student/5804916/6837357547a81.jpg" width="150px" />
+
+  <p>Дешевший у користуванні.</p>
+  <img src="https://learn.logikaschool.com/uploads/student/5804916/683735d391945.jpg" width="150px" />
+
+  <p>Не створює заторів на дорогах.</p>
+  <img src="https://learn.logikaschool.com/uploads/student/5804916/6837361ab4880.jpg" width="170px" />
+</div>
+
+<footer style=" background-color: #2c3e50; text-align: center; padding: 15px 0;">
+<p> <b> <i> <a style="color:#2a7ae4;" href="https://uk.wikipedia.org/wiki/%D0%92%D0%B5%D0%BB%D0%BE%D1%81%D0%B8%D0%BF%D0%B5%D0%B4%D0%BD%D0%B8%D0%B9_%D1%81%D0%BF%D0%BE%D1%80%D1%82">Детальніше про велоспорт</a> </i> </b> </p>
+<p style="color:#2a7ae4;"> <i> <b> ЗАМОВИТИ УРОКИ ВЕЛОСПОРТУ: +380950233506 </b> </i> </p>
     </footer> 
 </body>
 
 </html>
+
